--- a/css/quotes.css
+++ b/css/quotes.css
@@ -101,3 +101,16 @@ input, textarea, select {
 button {
     cursor: pointer;
 }
+
+.submission-h2 {
+    margin-bottom: 2rem;
+}
+
+.submission-p {
+    margin-block: 1rem;
+}
+
+.submission-btn-container {
+    text-align: center;
+    margin-top: 3rem;
+}
