--- a/css/styles.css
+++ b/css/styles.css
@@ -216,10 +216,12 @@ nav .btn:hover {
     max-width: 900px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 11rem;
     height: fit-content;
+    padding: 5px;
 }
 
 .distributor-logos {
